trunk/Archive2/47/018959a91b36ae/output
main.cpp:19:5: error: no matching function for call to 'f'
    f(std::vector<int>() );
    ^
main.cpp:13:6: note: candidate function not viable: no known conversion from 'std::vector<int>' to 'A' for 1st argument
void f(A);
     ^
1 error generated.
